Update back link to use full lab domain

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <a href="/" class="back-link">← Back to Lab</a>
+    <a href="https://lab.benoitdevilliers.com" class="back-link">← Back to Lab</a>
     <div id="app" class="container">
         <top-level-emotions 
             :is-active="currentScreen === 'level1'"
