Update feedback modal text and button style

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     <div class="feedback-modal" id="feedbackModal">
         <div class="feedback-content">
             <button class="close-modal" onclick="closeFeedback()">&times;</button>
-            <h2>Share Your Feedback</h2>
+            <h2>Feedback?</h2>
             <div class="feedback-form">
-                <textarea id="feedbackText" placeholder="How can we improve the emotion identifier? Any suggestions or issues?"></textarea>
-                <button onclick="submitFeedback()">Submit Feedback</button>
+                <textarea id="feedbackText" placeholder="What do you think about this app? How can we improve it?"></textarea>
+                <button onclick="submitFeedback()">Submit</button>
             </div>
             <div class="feedback-success" id="feedbackSuccess">
                 Thank you for your feedback!
