--- a/index.html
+++ b/index.html
@@ -127,16 +127,29 @@
             const feedback = document.getElementById('feedbackText').value;
             if (!feedback.trim()) return;
 
-            // Create mailto link with feedback
-            const subject = encodeURIComponent("Emotion Identifier Feedback");
-            const body = encodeURIComponent(feedback);
-            window.location.href = `mailto:benoitdevilliers@gmail.com?subject=${subject}&body=${body}`;
-
-            // Show success message and close modal
-            document.getElementById('feedbackSuccess').classList.add('active');
-            setTimeout(() => {
-                closeFeedback();
-            }, 2000);
+            // Send feedback to backend
+            fetch('http://localhost:5000/api/feedback', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ feedback })
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.error) {
+                    throw new Error(data.error);
+                }
+                document.getElementById('feedbackSuccess').classList.add('active');
+                document.getElementById('feedbackText').value = '';
+                setTimeout(() => {
+                    closeFeedback();
+                }, 2000);
+            })
+            .catch(error => {
+                console.error('Error:', error);
+                alert('Failed to send feedback. Please try again.');
+            });
         }
     </script>
 </body>
