Update feedback success message and styling

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <button onclick="submitFeedback()">Submit</button>
             </div>
             <div class="feedback-success" id="feedbackSuccess">
-                Thank you for your feedback!
+                Thank you for your feedback. Have a nice day!
             </div>
         </div>
     </div>
