Use FormSubmit endpoint URL and disable captcha

--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
         <div class="feedback-content">
             <button class="close-modal" onclick="closeFeedback()">&times;</button>
             <h2>Feedback?</h2>
-            <form class="feedback-form" action="https://formsubmit.co/benoit.devilliers888+emotionlabeling@gmail.com" method="POST">
+            <form class="feedback-form" action="https://formsubmit.co/el/xoweji" method="POST">
                 <input type="hidden" name="_subject" value="Emotion Identifier Feedback">
                 <input type="hidden" name="_next" value="https://emotion-labeling.pages.dev">
+                <input type="hidden" name="_captcha" value="false">
                 <textarea name="message" id="feedbackText" placeholder="What do you think about this app? How can we improve it?"></textarea>
                 <button type="submit">Submit</button>
             </form>
