--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             if (!feedback.trim()) return;
 
             try {
-                const response = await fetch('https://feedback-api.benoitdevilliers.com', {
+                const response = await fetch('https://feedback-api.floraniel.workers.dev', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
