--- a/index.html
+++ b/index.html
@@ -144,10 +144,12 @@
             if (!feedback.trim()) return;
 
             try {
+                console.log('Sending feedback...');
                 const response = await fetch('https://feedback-api.floraniel.workers.dev', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
+                        'Accept': 'application/json'
                     },
                     body: JSON.stringify({ 
                         feedback,
@@ -156,8 +158,11 @@
                     })
                 });
 
+                console.log('Response status:', response.status);
+                console.log('Response headers:', Object.fromEntries(response.headers.entries()));
+                
                 const data = await response.json();
-                console.log('Response:', data);
+                console.log('Response data:', data);
 
                 if (!response.ok) {
                     throw new Error(`Failed to send feedback: ${JSON.stringify(data)}`);
@@ -169,7 +174,11 @@
                     closeFeedback();
                 }, 500);
             } catch (error) {
-                console.error('Error details:', error);
+                console.error('Error details:', {
+                    message: error.message,
+                    stack: error.stack,
+                    toString: error.toString()
+                });
                 alert('Failed to send feedback. Please try again. Check console for details.');
             }
         }
