Update feedback API URL to feedback-api.benoitdevilliers.com

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Emotion Identifier</title>
+    <base href="/emotion-labeling/">
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -145,7 +146,7 @@
 
             try {
                 console.log('Sending feedback...');
-                const response = await fetch('https://feedback-api.floraniel.workers.dev', {
+                const response = await fetch('https://feedback-api.benoitdevilliers.com', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
