--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
             try {
                 console.log('Sending feedback...');
-                const response = await fetch('https://feedback-api.benoitdevilliers.com', {
+                const response = await fetch('https://new-feedback-api.benoitdevilliers.com', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
